Automatically update copyright date.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -54,7 +54,7 @@
       <div class="subfooter">
       <div class="col-md-12">
       <a class="navbar-brand" href="/" title="WebSurvey Home">
-        <img src="/img/web-survey-logo-sm.png" width="100" height="22" alt="WebSurvey"></a><span class="strat-dat"> a <a href="http://www.strategicdata.com.au/" title="Strategic Data">Strategic Data</a> business. &copy; 2014</span></div>
+        <img src="/img/web-survey-logo-sm.png" width="100" height="22" alt="WebSurvey"></a><span class="strat-dat"> a <a href="http://www.strategicdata.com.au/" title="Strategic Data">Strategic Data</a> business. &copy; {{ site.time | date: '%Y' }}</span></div>
         <div class="col-md-12 col-sm-12 col-xs-12">
           <ul class="list-inline footer-menu">
             <li><a href="#">Terms</a></li>
