Remove anchors to nowhere and add an id='top'

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
   <!-- ======== @Region: body ======== -->
-  <body class="page page-index-static">
+  <body class="page page-index-static" id="top">
     <a href="#content" class="sr-only">Skip to content</a> 
     <!-- ======== @Region: #navigation ======== -->
     <div id="navigation" class="wrapper">
