Remove more anchors to nowhere.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -56,7 +56,7 @@
                 <a href="/contact/">Contact</a> 
               </li>
               <li class="dropdown">
-                <a href="#" class="dropdown-toggle" id="about-drop" data-toggle="dropdown" data-hover="dropdown">Demo survey</a> 
+                <a href="/" class="dropdown-toggle" id="about-drop" data-toggle="dropdown" data-hover="dropdown">Demo survey</a> 
               </li>
             </ul>
           </div>
