--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -57,9 +57,9 @@
         <img src="/img/web-survey-logo-sm.png" width="100" height="22" alt="WebSurvey"></a><span class="strat-dat"> a <a href="http://www.strategicdata.com.au/" title="Strategic Data">Strategic Data</a> business. &copy; {{ site.time | date: '%Y' }}</span></div>
         <div class="col-md-12 col-sm-12 col-xs-12">
           <ul class="list-inline footer-menu">
-            <li><a href="#">Terms</a></li>
-            <li><a href="#">Privacy</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="/">Terms</a></li>
+            <li><a href="/">Privacy</a></li>
+            <li><a href="/">Contact Us</a></li>
           </ul>
         </div>
       </div>
