--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,10 +31,10 @@
     <script src="/plugins/respond/respond.min.js"></script>
     <![endif]-->  
     <!-- Le fav and touch icons - @todo: fill with your icons or remove -->
-    <link rel="shortcut icon" href="/img/icons/favicon.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/img/icons/114x114.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/img/icons/72x72.png">
-    <link rel="apple-touch-icon-precomposed" href="/img/icons/default.png">
+    <!-- link rel="shortcut icon" href="/img/icons/favicon.png" -->
+    <!-- link rel="apple-touch-icon-precomposed" sizes="114x114" href="/img/icons/114x114.png" -->
+    <!-- link rel="apple-touch-icon-precomposed" sizes="72x72" href="/img/icons/72x72.png" -->
+    <!-- link rel="apple-touch-icon-precomposed" href="/img/icons/default.png" -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Rambla' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Calligraffitti' rel='stylesheet' type='text/css'>  
