--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,7 +44,7 @@
                 <a href="/services/">Services</a> 
               </li>
                <li class="dropdown">
-                <a href="/faq/" class="dropdown-toggle" id="faq-drop" data-toggle="dropdown" data-hover="dropdown">FAQ</a> 
+                <a href="/faq/" class="dropdown-toggle" id="faq-drop" data-toggle="dropdown" data-hover="dropdown">FAQ</a>
                 <!-- Menu -->
                 <ul class="dropdown-menu" role="menu" aria-labelledby="features-drop">
                   <li><a href="/faq/" class="menu-item">Getting started</a></li>
@@ -56,7 +56,7 @@
                 <a href="/contact/">Contact</a> 
               </li>
               <li class="dropdown">
-                <a href="/" class="dropdown-toggle" id="about-drop" data-toggle="dropdown" data-hover="dropdown">Demo survey</a> 
+                <a href="https://demo.websurvey.net.au/" class="dropdown-toggle" id="about-drop" data-toggle="dropdown" data-hover="dropdown">Demo survey</a>
               </li>
             </ul>
           </div>
