Shush more html errors/warnings.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,7 +34,7 @@
           <h3>Stay in touch</h3>
           <p>Stay up to date with our latest news and product releases by signing up to our newsletter.</p>
           <!--@todo: replace with mailchimp code-->
-          <form role="form">
+          <form>
             <div class="input-group input-group-sm">
               <label class="sr-only" for="email-field">Email</label>
               <input type="text" class="form-control" id="email-field" placeholder="Email">
