--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <!-- Plugins required on all pages NOTE: Additional non-required plugins are loaded ondemand as of AppStrap 2.5 -->
     <!-- Plugin: animate.css (animated effects) - http://daneden.github.io/animate.css/ -->
     <link href="/plugins/animate/animate.css" rel="stylesheet">
-    <!-- @LINEBREAK -- <!-- Plugin: flag icons - http://lipis.github.io/flag-icon-css/ -->
+    <!-- Plugin: flag icons - http://lipis.github.io/flag-icon-css/ -->
     <link href="/plugins/flag-icon-css/css/flag-icon.min.css" rel="stylesheet">
     <!-- Theme style -->
     <link href="/css/theme-style.min.css" rel="stylesheet">
