--- a/_includes/header.html
+++ b/_includes/header.html
@@ -46,7 +46,7 @@
                <li class="dropdown">
                 <a href="/faq/" class="dropdown-toggle" id="faq-drop" data-toggle="dropdown" data-hover="dropdown">FAQ</a>
                 <!-- Menu -->
-                <ul class="dropdown-menu" role="menu" aria-labelledby="features-drop">
+                <ul class="dropdown-menu" role="menu">
                   <li><a href="/faq/" class="menu-item">Getting started</a></li>
                   <li><a href="/faq/technical-features.html" class="menu-item">Technical Features</a></li>
                   <li><a href="/faq/about-web-survey.html" class="menu-item">About WebSurvey</a></li>
