Delete more detritus, use html5validator instead since nokogiri lost our address.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,28 +5,30 @@
     <div class="row">
       <div class="col-md-8 col">
         <div class="block contact-block">
-          <!--@todo: replace with company contact details-->
+          <!-- @todo: replace with company contact details -->
           <h3> Contact Us</h3>
+          <!-- address -->
           <address>
             <ul class="fa-ul">
               <li>
-                <abbr title="Phone"><i class="fa fa-li fa-phone"></i></abbr>
+                <abbr title="Phone"> <i class="fa fa-li fa-phone"></i> </abbr>
                 +613 9340 9001
               </li>
               <li>
-                <abbr title="Email"><i class="fa fa-li">@</i></abbr>
+                <abbr title="Email"> <i class="fa fa-li">@</i> </abbr>
                 <a href="mailto:info@websurvey.com.au">info@websurvey.com.au</a>
               </li>
               <li>
-                <abbr title="Address"><i class="fa fa-li fa-home"></i></abbr>
+                <abbr title="Address"> <i class="fa fa-li fa-home"></i> </abbr>
                 2nd floor, 51 – 55 Johnston Street, Fitzroy , Victoria 3065, Australia
               </li>
               <li>
-                <abbr title="Address"><i class="fa fa-li fa-envelope"></i></abbr>
+                <abbr title="Address"> <i class="fa fa-li fa-envelope"></i> </abbr>
                 PO Box 1166, Carlton, Victoria 3053, Australia
               </li>
             </ul>
           </address>
+          <!-- /address -->
         </div>
       </div>
       <div class="col-md-4 col">
@@ -50,7 +52,6 @@
       <div id="toplink">
         <a href="#top" class="top-link" title="Back to top">Back To Top <i class="fa fa-chevron-up"></i></a>
       </div>
-      <!--@todo: replace with company copyright details-->
       <div class="subfooter">
       <div class="col-md-12">
       <a class="navbar-brand" href="/" title="WebSurvey Home">
