--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,10 @@
     <!--Plugin: Retina.js (high def image replacement) - @see: http://retinajs.com/-->
     <script src="/plugins/retina/js/retina-1.1.0.min.js"></script>
   <!-- get jQuery from the google apis -->
+    <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
+    <style type="text/css">
+    #mc_embed_signup{ clear:left; font:14px Helvetica,Arial,sans-serif; }
+    </style>
   </head> 
 {% include header.html %}
 {{ content }}
