--- a/_includes/header.html
+++ b/_includes/header.html
@@ -43,6 +43,9 @@
               <li class="dropdown">
                 <a href="/services/">Services</a> 
               </li>
+              <li class="dropdown">
+                <a href="/Data Collection/">Data Collection</a> 
+              </li>
                <li class="dropdown">
                 <a href="/faq/" class="dropdown-toggle" id="faq-drop" data-hover="dropdown">FAQ</a>
                 <!-- Menu -->
