added Data Collection page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,7 +44,7 @@
                 <a href="/services/">Services</a> 
               </li>
               <li class="dropdown">
-                <a href="/Data Collection/">Data Collection</a> 
+                <a href="/data-collection/">Data Collection</a> 
               </li>
                <li class="dropdown">
                 <a href="/faq/" class="dropdown-toggle" id="faq-drop" data-hover="dropdown">FAQ</a>
