Providing text equivalents to non-text elements

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
   <!-- ======== @Region: body ======== -->
   <body class="page page-index-static" id="top">
-    <a href="#content" class="sr-only">Skip to content</a> 
+    <a href="#content" class="sr-only">Skip to content</a>
     <!-- ======== @Region: #navigation ======== -->
     <div id="navigation" class="wrapper">
       <div class="navbar-static-top">
@@ -23,7 +23,7 @@
               <div class="slogan">online data collection expertise</div>
             </div>
             <div class="contact-icon-box">
-            <i class="fa fa-phone fa-flip-horizontal phone-icon"></i> <span>+613 9340 9001</span>
+            <i class="fa fa-phone fa-flip-horizontal phone-icon"></i><span class="sr-only">Phone number</span> <span>+613 9340 9001</span>
           </div>
           <!-- mobile collapse menu button - data-toggle="toggle" = default BS menu - data-toggle="jpanel-menu" = jPanel Menu -->
           <a href="#top" class="navbar-btn" data-toggle="jpanel-menu" data-target=".navbar-collapse" data-direction="right"><i class="fa fa-bars"></i></a>
@@ -32,16 +32,16 @@
             <!--main navigation-->
             <ul class="nav navbar-nav">
               <li class="home-link active">
-                <a href="/"><i class="fa fa-home"></i><span class="hidden">Home</span></a>
+                <a href="/"><i class="fa fa-home"></i><span class="sr-only">Home</span></a>
               </li>
              <li class="dropdown">
-                <a href="/about/">About</a> 
+                <a href="/about/">About</a>
               </li>
               <li class="dropdown">
-                <a href="/features/">Features</a> 
+                <a href="/features/">Features</a>
               </li>
               <li class="dropdown">
-                <a href="/services/">Services</a> 
+                <a href="/services/">Services</a>
               </li>
               <li class="dropdown">
                 <a href="/data-collection/">Data Collection</a> 
@@ -56,7 +56,7 @@
                 </ul>
               </li>
               <li class="dropdown">
-                <a href="/contact/">Contact</a> 
+                <a href="/contact/">Contact</a>
               </li>
               <li class="dropdown">
                 <a href="https://demo.websurvey.net.au/" target="_blank">Demo survey</a>
