adding sr text for links that open new windows

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -59,7 +59,7 @@
                 <a href="/contact/">Contact</a>
               </li>
               <li class="dropdown">
-                <a href="https://demo.websurvey.net.au/" target="_blank">Demo survey</a>
+                <a href="https://demo.websurvey.net.au/" target="_blank">Demo survey <span class="sr-only">(opens new window)</span></a>
               </li>
             </ul>
           </div>
