adding aria roles for screen readers

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
       <!--Header & Branding region-->
       <div class="header" data-toggle="clingify">
         <div class="header-inner container">
-          <div class="navbar">
+          <div class="navbar" role="navigation">
             <div class="pull-left logo-box">
               <!--branding/logo-->
                <!--branding/logo-->
