--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,10 +10,10 @@
     <meta name="description" content="">
     <meta name="author" content="Themelize.me">
     <!-- Bootstrap CSS -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet">  
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
     <link href="/css/font-awesome.min.css" rel="stylesheet">
-    
+
     <!-- Plugins required on all pages NOTE: Additional non-required plugins are loaded ondemand as of AppStrap 2.5 -->
     <!-- Plugin: animate.css (animated effects) - http://daneden.github.io/animate.css/ -->
     <link href="/plugins/animate/animate.css" rel="stylesheet">
@@ -22,14 +22,14 @@
     <!-- Theme style -->
     <link href="/css/theme-style.min.css" rel="stylesheet">
     <!--Your custom colour override-->
-     <link href="/css/colour-red.css" id="colour-scheme" rel="stylesheet">   
+     <link href="/css/colour-red.css" id="colour-scheme" rel="stylesheet">
     <!-- Your custom override -->
-    <link href="/css/custom-style.css" rel="stylesheet">   
+    <link href="/css/custom-style.css" rel="stylesheet">
     <!-- HTML5 shiv & respond.js for IE6-8 support of HTML5 elements & media queries -->
     <!--[if lt IE 9]>
     <script src="/plugins/html5shiv/dist/html5shiv.js"></script>
     <script src="/plugins/respond/respond.min.js"></script>
-    <![endif]-->  
+    <![endif]-->
     <!-- Le fav and touch icons - @todo: fill with your icons or remove -->
     <!-- link rel="shortcut icon" href="/img/icons/favicon.png" -->
     <!-- link rel="apple-touch-icon-precomposed" sizes="114x114" href="/img/icons/114x114.png" -->
@@ -37,7 +37,7 @@
     <!-- link rel="apple-touch-icon-precomposed" href="/img/icons/default.png" -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Rambla' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Calligraffitti' rel='stylesheet' type='text/css'>  
+    <link href='http://fonts.googleapis.com/css?family=Calligraffitti' rel='stylesheet' type='text/css'>
     <!--Plugin: Retina.js (high def image replacement) - @see: http://retinajs.com/-->
     <script src="/plugins/retina/js/retina-1.1.0.min.js"></script>
   <!-- get jQuery from the google apis -->
@@ -45,9 +45,11 @@
     <style type="text/css">
     #mc_embed_signup{ clear:left; font:14px Helvetica,Arial,sans-serif; }
     </style>
-  </head> 
+  </head>
 {% include header.html %}
+<div role="main">
 {{ content }}
+</div>
 {% include footer.html %}
 <!--Scripts -->
 <script src="/js/jquery.min.js"></script>
