--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,8 +17,8 @@
               <!--branding/logo-->
                <!--branding/logo-->
               <a class="navbar-brand" href="/" title="Home">
-                <h1>
-                <img src="/img/web-survey-logo.png" class="img-responsive" width="300" height="67" alt="Web Survey"> </h1>
+                <!--<h1>-->
+                <img src="/img/web-survey-logo.png" class="img-responsive" width="300" height="67" alt="Web Survey"> <!--</h1>-->
               </a>
               <div class="slogan">online data collection expertise</div>
             </div>
@@ -44,7 +44,7 @@
                 <a href="/services/">Services</a>
               </li>
               <li class="dropdown">
-                <a href="/data-collection/">Data Collection</a> 
+                <a href="/data-collection/">Data Collection</a>
               </li>
                <li class="dropdown">
                 <a href="/faq/" class="dropdown-toggle" id="faq-drop" data-hover="dropdown">FAQ</a>
