updating heading levels and styles, fixing comments and whitespace

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,8 +17,10 @@
               <!--branding/logo-->
                <!--branding/logo-->
               <a class="navbar-brand" href="/" title="Home">
-                <!--<h1>-->
-                <img src="/img/web-survey-logo.png" class="img-responsive" width="300" height="67" alt="Web Survey"> <!--</h1>-->
+                <h1>
+                  <img src="/img/web-survey-logo.png" class="img-responsive" width="300" height="67" alt="Web Survey">
+                  <span class="sr-only">Web Survey</span>
+                </h1>
               </a>
               <div class="slogan">online data collection expertise</div>
             </div>
