updating links for context and bugfixing whitespace

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,7 +28,7 @@
             <i class="fa fa-phone fa-flip-horizontal phone-icon"></i><span class="sr-only">Phone number</span> <span>+613 9340 9001</span>
           </div>
           <!-- mobile collapse menu button - data-toggle="toggle" = default BS menu - data-toggle="jpanel-menu" = jPanel Menu -->
-          <a href="#top" class="navbar-btn" data-toggle="jpanel-menu" data-target=".navbar-collapse" data-direction="right"><i class="fa fa-bars"></i></a>
+          <a href="#top" class="navbar-btn" data-toggle="jpanel-menu" data-target=".navbar-collapse" data-direction="right"><i class="fa fa-bars"></i><span class="sr-only">Collapsable Menu</span></a>
           <!--everything within this div is collapsed on mobile-->
           <div class="navbar-collapse collapse">
             <!--main navigation-->
