--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,28 +35,34 @@
         <div class="block newsletter">
           <h4>Stay in touch</h4>
           <p>Stay up to date with our latest news and product releases by signing up to our newsletter.</p>
-<!-- Begin MailChimp Signup Form -->
-<div id="mc_embed_signup">
-<form action="//websurvey.us11.list-manage.com/subscribe/post?u=b1dbc0432a40a6e28b4984351&amp;id=51589fb78a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
 
-<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-<div class="mc-field-group">
-	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
-</label>
-	<input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL">
-</div>
-  <div id="mce-responses" class="clear">
-    <div class="response" id="mce-error-response" style="display:none"></div>
-    <div class="response" id="mce-success-response" style="display:none"></div>
-  </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;"><input type="text" name="b_b1dbc0432a40a6e28b4984351_51589fb78a" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn-subscribe"></div>
-    </div>
-</form>
-</div>
-<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-<!--End mc_embed_signup-->
+          <!-- Begin MailChimp Signup Form -->
+          <div id="mc_embed_signup">
+            <form action="//websurvey.us11.list-manage.com/subscribe/post?u=b1dbc0432a40a6e28b4984351&amp;id=51589fb78a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+              <div id="mc_embed_signup_scroll">
+                <div class="indicates-required">
+                  <span class="asterisk">*</span> indicates required
+                </div>
+                <div class="mc-field-group">
+                	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+                  </label>
+              	  <input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL">
+                </div>
+                <div id="mce-responses" class="clear">
+                  <div class="response" id="mce-error-response" style="display:none"></div>
+                  <div class="response" id="mce-success-response" style="display:none"></div>
+                </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;">
+                  <input type="text" name="b_b1dbc0432a40a6e28b4984351_51589fb78a" tabindex="-1" value="">
+                </div>
+                <div class="clear">
+                  <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn-subscribe">
+                </div>
+              </div>
+            </form>
+          </div>
+          <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+          <!--End mc_embed_signup-->
         </div>
       </div>
     </div>
@@ -65,9 +71,16 @@
         <a href="#top" class="top-link" title="Back to top">Back To Top <i class="fa fa-chevron-up"></i></a>
       </div>
       <div class="subfooter">
-      <div class="col-md-12">
-      <a class="navbar-brand" href="/" title="WebSurvey Home">
-        <img src="/img/web-survey-logo-sm.png" width="100" height="22" alt="WebSurvey"></a><span class="strat-dat"> a <a href="http://www.strategicdata.com.au/" title="Strategic Data" target="_blank">Strategic Data <span class="sr-only">(opens new window)</span></a> business. &copy; {{ site.time | date: '%Y' }}</span></div>
+        <div class="col-md-12">
+          <a class="navbar-brand" href="/" title="WebSurvey Home">
+            <img src="/img/web-survey-logo-sm.png" width="100" height="22" alt="WebSurvey">
+            <span class="sr-only">Home</span>
+          </a>
+          <span class="strat-dat"> a
+            <a href="http://www.strategicdata.com.au/" title="Strategic Data" target="_blank">Strategic Data <span class="sr-only">(opens new window)</span>
+            </a> business. &copy; {{ site.time | date: '%Y' }}
+          </span>
+        </div>
         <div class="col-md-12 col-sm-12 col-xs-12">
           <ul class="list-inline footer-menu">
             <li><a href="/about/terms.html">Terms</a></li>
