--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -83,8 +83,9 @@
         </div>
         <div class="col-md-12 col-sm-12 col-xs-12">
           <ul class="list-inline footer-menu">
-            <li><a href="/about/terms.html">Terms</a></li>
-            <li><a href="/about/privacy.html">Privacy</a></li>
+            <li><a href="/about/terms">Terms</a></li>
+            <li><a href="/about/accessibility">Accessibility</a></li>
+            <li><a href="/about/privacy">Privacy</a></li>
             <li><a href="/contact/">Contact Us</a></li>
           </ul>
         </div>
