making the faq drop down keyboard accessible

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -49,7 +49,7 @@
                 <a href="/data-collection/">Data Collection</a>
               </li>
                <li class="dropdown">
-                <a href="/faq/" class="dropdown-toggle" id="faq-drop" data-hover="dropdown">FAQ</a>
+                <a href="/faq/" class="dropdown-toggle" id="faq-drop" data-hover="dropdown" data-toggle="dropdown">FAQ</a>
                 <!-- Menu -->
                 <ul class="dropdown-menu" role="menu">
                   <li><a href="/faq/" class="menu-item">Getting started</a></li>
