replacing carousel with accessible version

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,8 @@
     <!-- Plugins required on all pages NOTE: Additional non-required plugins are loaded ondemand as of AppStrap 2.5 -->
     <!-- Plugin: animate.css (animated effects) - http://daneden.github.io/animate.css/ -->
     <link href="/plugins/animate/animate.css" rel="stylesheet">
+    <!-- carousel stylesheet  http://benschwarz.github.io/gallery-css -->
+    <link href="/css/gallery.css" rel="stylesheet">
     <!-- Plugin: flag icons - http://lipis.github.io/flag-icon-css/ -->
     <link href="/plugins/flag-icon-css/css/flag-icon.min.css" rel="stylesheet">
     <!-- Theme style -->
