--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,7 @@
      <link href="/css/colour-red.css" id="colour-scheme" rel="stylesheet">
     <!-- Your custom override -->
     <link href="/css/custom-style.css" rel="stylesheet">
+    <link href="/css/main.css" rel="stylesheet">
     <!-- HTML5 shiv & respond.js for IE6-8 support of HTML5 elements & media queries -->
     <!--[if lt IE 9]>
     <script src="/plugins/html5shiv/dist/html5shiv.js"></script>
