--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
         </div>
       </div>
       <!--Header & Branding region-->
-      <div class="header" data-toggle="clingify">
+      <div class="header">
         <div class="header-inner container">
           <div class="navbar" role="navigation">
             <div class="pull-left logo-box">
